# mcpsec

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ai_audit_test.txt  ai_scan_test.txt  debug_fuzz.py  debug_scan_results.txt  debug_semgrep.py  debug_semgrep_raw.py  final_debug_results.txt  fuzz_results.json  kanban_report.txt  playwright_report.txt  pyproject.toml  report.sarif  scan.txt  shell.nix  verify_patterns.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
mcpsec/: __init__.py  cli.py  config.py  discovery.py  engine.py  models.py  ui.py
mcpsec/ai/: ai_payload_generator.py  ai_taint_analyzer.py  ai_validator.py  finding_classifier.py  llm_client.py
mcpsec/client/: __init__.py  mcp_client.py
mcpsec/exploit/: __init__.py  connection.py  evidence.py  formatters.py  mcp_repl.py  payload_engine.py  session.py  state_tracker.py
mcpsec/exploit/playbooks/: __init__.py  command_injection.py  generic.py  path_traversal.py  prompt_injection.py  sandbox_escape.py  sqli.py  ssrf.py
mcpsec/fuzzer/: fuzz_engine.py
mcpsec/fuzzer/chain/: __init__.py  chain_analyzer.py  chain_builder.py  chain_engine.py  chain_reporter.py  injection_points.py  state_extractor.py  state_manager.py
mcpsec/fuzzer/evolve/: __init__.py  corpus.py  engine.py  feedback.py  mcp_mutators.py  mutators.py  scheduler.py
mcpsec/fuzzer/generators/: __init__.py  base.py  boundary_testing.py  concurrency_attacks.py  deserialization.py  encoding_attacks.py  header_mutations.py  id_confusion.py  injection_payloads.py  integer_boundaries.py  json_edge_cases.py  malformed_json.py  memory_exhaustion.py  memory_exhaustion_v2.py  method_mutations.py  param_mutations.py  protocol_state.py  protocol_state_machine.py  protocol_violation.py  regex_dos.py  resource_exhaustion.py  session_attacks.py  timing_attacks.py  type_confusion.py  unicode_attacks.py
mcpsec/fuzzer/transport/: http_fuzzer.py  stdio_fuzzer.py
mcpsec/reporters/: __init__.py  json_report.py  sarif_report.py
mcpsec/rogue/: __init__.py  payloads.py  server.py
mcpsec/rules/: exclusions.yml  mcp-ast-sandbox-escape.yml  mcp-broad-command-injection.yml  mcp-broad-path-traversal.yml  mcp-broad-sql-injection.yml  mcp-capability-issues.yml  mcp-code-smells.yml  mcp-command-injection.yml  mcp-dangerous-defaults.yml  mcp-dangerous-eval.yml  mcp-description-injection.yml  mcp-deserialization.yml  mcp-dotnet-injection.yml  mcp-go-injection.yml  mcp-indirect-injection.yml  mcp-path-traversal.yml  mcp-protocol-handler.yml  mcp-python-async.yml  mcp-python-broad.yml  mcp-python-injection.yml  mcp-resource-uri.yml  mcp-rust-injection.yml  mcp-secrets-exposure.yml  mcp-secrets-hardcoded.yml  mcp-server-patterns.yml  mcp-sql-injection.yml  mcp-ssrf-patterns.yml  mcp-taint-sinks.yml
mcpsec/scanners/: __init__.py  annotation_integrity.py  auth_audit.py  base.py  capability_escalation.py  code_execution.py  command_injection.py  description_injection.py  description_prompt_injection.py  deserialization.py  idor.py  info_leak.py  path_traversal.py  prompt_injection.py  rag_poisoning.py  resource_ssrf.py  response_classifier.py  secrets_exposure.py  sql_rce.py  ssrf.py  template_injection.py  toolchain_analyzer.py
mcpsec/sql_scanner/: __init__.py  confirmer.py  detector.py  exploiter.py  fingerprint.py  payloads.py  rce.py
mcpsec/static/: audit_engine.py  js_analyzer.py  patterns.py  py_analyzer.py  semgrep_engine.py  source_fetcher.py  taint_analyzer.py
mcpsec/static/analysis/: __init__.py  reachability.py  sink_scanner.py
mcpsec/static/framework/: __init__.py  detector.py
mcpsec/static/patterns/: __init__.py  base.py  generator.py  registry.py
mcpsec/static/patterns/sanitizers/: __init__.py  sanitizers.py
mcpsec/static/patterns/sinks/: __init__.py  additional.py  bulk_extension.py  code_execution.py  command_injection.py  crypto.py  deserialization.py  expanded_patterns.py  final_patterns.py  injection_extra.py  misc.py  path_traversal.py  sql_injection.py  ssrf.py  web_vulns.py  xxe.py
mcpsec/static/patterns/sources/: __init__.py  mcp_frameworks.py
tests/: blind_test.py  check_npx.py  dangerous_server.py  debug_fast_python.py  debug_newline.py  debug_startup_delay.py  noisy_test_server.py  simple_echo.py  simple_test_server.py  slow_test_server.py  stateful_test_server.py  test_config.py  test_exploit.py  test_fuzzer.py  test_sarif.py  test_scanners.py  test_semgrep_rules.py  vuln_test_server.py  windows_subprocess_debug.py  windows_subprocess_debug_v2.py  windows_subprocess_debug_v3.py  windows_subprocess_debug_v5.py  windows_subprocess_debug_v6.py  windows_subprocess_debug_v7.py  windows_subprocess_debug_v8.py  windows_subprocess_debug_v9.py
tests/servers/: stateful_test_server.py  stress_test_server.py  vulnerable_db_server.py
