[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcpsec"
version = "0.3.0"
description = "Security scanner for MCP (Model Context Protocol) server implementations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Manthan" }
]
keywords = ["mcp", "security", "pentesting", "ai", "scanner", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "mcp>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "anyio>=4.0.0",
    "semgrep>=1.90.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
mcpsec = "mcpsec.cli:app"

[project.urls]
Homepage = "https://github.com/manthanghasadiya/mcpsec"
Repository = "https://github.com/manthanghasadiya/mcpsec"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
